# domotux

./: .gitignore  Cargo.toml  do  local  notes.txt  remote  rtbo.env
base/: Cargo.toml
base/src/: cfg.rs  daytime.rs  lib.rs  mqtt.rs  vecmap.rs
base/src/mqtt/: client.rs  topics.rs
couleur-tempo/: Cargo.toml  couleur-tempo.service
couleur-tempo/src/: main.rs
domotux/: Cargo.toml  ReadMe.md  domotux.service
domotux/src/: db.rs  main.rs  service.rs
domotux/src/service/: conso_stats.rs  jwt.rs  tarifs_db.rs
facade/: .env.development  README.md  env.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  uno.config.ts  vite.config.mts
facade/src/: App.vue
facade/src/api/: index.ts
facade/src/components/: ConsoStats.vue  PowerGauge.vue  TempoCard.vue
facade/src/pages/: Auth.vue  Dashboard.vue  Login.vue  index.vue
facade/src/plugins/: i18n.ts
facade/src/router/: index.ts
facade/src/stores/: auth.ts  dashboard.ts
influx/: Cargo.toml
influx/src/: lib.rs
linky/: Cargo.toml  linky.service  linky.yml
linky/src/: main.rs  mqtt.rs  publish.rs  tic.rs
mqtt/: Cargo.toml
mqtt/src/: client.rs  lib.rs  topics.rs
tarifs-cre/: Cargo.toml  tarifs-cre.service  tarifs-cre.yml
tarifs-cre/src/: contract.rs  cre.rs  lib.rs  main.rs  tabular.rs
tools/import-compteurs/: Cargo.toml
tools/import-compteurs/src/: main.rs
tools/mig_influx/: Cargo.toml  ReadMe.md
tools/mig_influx/src/: main.rs
wattflux/: Cargo.toml  wattflux.service  wattflux.yml
wattflux/src/: influx.rs  main.rs  subscribe.rs
