[workspace]
resolver = "3"
members = ["base", "linky", "wattflux"]

[workspace.dependencies]
base = { path = "base" }

anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
tokio = { version = "1.50.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
