[workspace]
resolver = "3"
members = ["base", "domotux", "linky", "tarifs-cre", "wattflux"]

[workspace.dependencies]
base = { path = "base" }

anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.9"
log = "0.4.29"
rand = { version = "0.10.0", features = ["thread_rng"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
tokio = { version = "1.50.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
] }
