[package]
name = "domotux"
version = "0.1.0"
edition = "2024"

[dependencies]
base.workspace = true

anyhow.workspace = true
axum.workspace = true
clap.workspace = true
dirs.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_yml.workspace = true
tokio.workspace = true

inquire = "0.9.4"
turso = "0.5.1"
base64 = "0.22.1"
sha2 = "0.11.0"
arboard = { version = "3.6.1", default-features = false }
jwt = "0.16.0"
hmac = "0.12.1"
