[package]
name = "domotux"
version = "0.1.0"
edition = "2024"

[features]
no-secret = []

[dependencies]
base.workspace = true
mqtt.workspace = true

anyhow.workspace = true
axum.workspace = true
clap.workspace = true
dirs.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tokio.workspace = true

inquire = "0.9.4"
turso = "0.5.1"
base64 = "0.22.1"
sha2 = "0.10.9"
hmac = "0.12.1"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing-subscriber = "0.3.23"
