[package]
name = "wattflux"
version = "0.1.0"
edition = "2024"

[dependencies]
base.workspace = true
mqtt.workspace = true

anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tokio.workspace = true

